# ara

./: .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.ch.md  DESIGN.md  README.md
cmake/: sanitizer.cmake
cmake/find/: arrow.cmake  folly.cmake  gflags.cmake  rapidjson.cmake
cmake/testing/: testing.cmake
conda/: ara-build.yml  ara-dev.yml  arra_build.yml  arra_dev.sh  arra_dev.yml
src/: foo.cpp  foo.h  main.cpp
src/ara/: CMakeLists.txt
src/ara/common/: CMakeLists.txt  batch.h  defines.h  foo.cpp  foo.h  meta.h  observer.h  options.h  query_context.h
src/ara/common/common/: batch.h
src/ara/driver/: CMakeLists.txt  foo.cpp
src/ara/executor/: CMakeLists.txt  foo.cpp
src/ara/op/: CMakeLists.txt  foo.cpp  op_output.h  op_output_test.cpp
src/ara/operator/: CMakeLists.txt  foo.cpp  operator_output.h
src/ara/operator/operator/: operator_output.h
src/ara/pipeline/: CMakeLists.txt  README.md  defines.h  foo.cpp  logical_pipeline.cpp  logical_pipeline.h  physical_pipeline.cpp  physical_pipeline.h  pipeline_compile_test.cpp  pipeline_context.h  pipeline_observer.cpp  pipeline_observer.h  pipeline_task.cpp  pipeline_task.h  pipeline_task_group.cpp  pipeline_task_group.h  pipeline_task_test.cpp  pipeline_test.cpp
src/ara/pipeline/op/: hash_aggregate.cpp  hash_aggregate.h  hash_aggregate_test.cpp  hash_join.cpp  hash_join.h  hash_join_build.cpp  hash_join_build.h  hash_join_build_test.cpp  hash_join_probe.cpp  hash_join_probe.h  hash_join_probe_test.cpp  op.h  op_output.h  scalar_aggregate.cpp  scalar_aggregate.h  scalar_aggregate_test.cpp  single_batch_parallel_source.cpp  single_batch_parallel_source.h  single_batch_parallel_source_test.cpp  sort.cpp  sort.h  table_parallel_source.cpp  table_parallel_source.h  table_parallel_source_test.cpp
src/ara/plan/: CMakeLists.txt  foo.cpp
src/ara/schedule/: CMakeLists.txt  README.md  async_awaiter.cpp  async_awaiter.h  async_double_pool_scheduler.cpp  async_double_pool_scheduler.h  async_dual_pool_scheduler.cpp  async_dual_pool_scheduler.h  async_resumer.h  async_resumer_awaiter_test.cpp  coro_awaiter.cpp  coro_awaiter.h  coro_ready_queue.h  coro_resumer.h  coro_resumer_awaiter_test.cpp  folly_future_scheduler.cpp  folly_future_scheduler.h  foo.cpp  naive_parallel_scheduler.cpp  naive_parallel_scheduler.h  parallel_coro_scheduler.cpp  parallel_coro_scheduler.h  schedule_context.h  schedule_observer.cpp  schedule_observer.h  schedule_test.cpp  scheduler.cpp  scheduler.h  scheduler_test.cpp  sequential_coro_scheduler.cpp  sequential_coro_scheduler.h  sync_awaiter.cpp  sync_awaiter.h  sync_resumer.h  sync_resumer_awaiter_test.cpp
src/ara/task/: CMakeLists.txt  README.md  awaiter.h  backpressure.h  defines.h  foo.cpp  resumer.h  task.cpp  task.h  task_context.h  task_group.cpp  task_group.h  task_meta.h  task_observer.cpp  task_observer.h  task_status.h  task_test.cpp
src/ara/task/task/: task_status.h
src/ara/util/: CMakeLists.txt  defines.h  foo.cpp  util.cpp  util.h
src/ara/util/util/: util.h
src/arrow/acero/: test_util_internal.h
src/sketch/: CMakeLists.txt  sketch_aggregation_test.cpp  sketch_arrow_hash_join_test.cpp  sketch_arrow_swiss_join_test.cpp  sketch_async_backpressure_test.cpp  sketch_async_test.cpp  sketch_coro_test.cpp  sketch_future_test.cpp  sketch_hash_join.cpp  sketch_hash_join.h  sketch_hash_join_test.cpp  sketch_operator_test.cpp  sketch_test.cpp
tests/: CMakeLists.txt  foo_test.cpp  future_test.cpp  hash_join_test.cpp  sketch_hash_join.cpp  sketch_hash_join.h  sketch_hash_join_operator_test.cpp  sketch_hash_join_test.cpp  sketch_operator_test.cpp  sketch_operator_test_copy.cpp  sketch_pipeline_test.cpp  sketch_swiss_join_test.cpp  sketch_test.cpp  task_test.cpp
tests/ara/: CMakeLists.txt
tests/ara/sketch/: CMakeLists.txt  sketch_arrow_swiss_join_test.cpp  sketch_coro_test.cpp  sketch_hash_join.cpp  sketch_hash_join_test.cpp  sketch_test.cpp
tests/arrow/acero/: swiss_join.h
tests/sketch/: CMakeLists.txt  sketch_aggregation_test.cpp  sketch_arrow_swiss_join_test.cpp  sketch_coro_test.cpp  sketch_future_test.cpp  sketch_hash_join.cpp  sketch_hash_join.h  sketch_hash_join_test.cpp  sketch_result_and_status_test.cpp  sketch_test.cpp
